cluster/apps/default/zigbee2mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name zigbee2mqtt
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: *name
          image: ghcr.io/koenkk/zigbee2mqtt:1.25.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              smarter-devices/ttyUSB0: 1
          ports:
            - name: &portname http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: zigbee2mqtt-config
              mountPath: /config
          startupProbe:
            tcpSocket:
              port: *portname
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: *portname
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: *portname
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: zigbee2mqtt-config
          persistentVolumeClaim:
            claimName: zigbee2mqtt-config
