cluster/apps/default/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
spec:
  selector:
    app.kubernetes.io/name: zigbee2mqtt
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
